<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_back"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/dialog_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/str_call_to_support"
        android:textColor="@android:color/black"
        android:textSize="10sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:text="@string/str_no"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/font_12"
            app:elevation="@dimen/margin_16dp"
            app:layout_anchorGravity="center|top" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:text="@string/str_yes"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/font_12"
            app:elevation="@dimen/margin_16dp"
            app:layout_anchorGravity="center|top" />

    </LinearLayout>


</LinearLayout>
