<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.login.complete.password.ConfirmPasswordFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl_previous_step"
                style="@style/rippleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/imgView_back"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:adjustViewBounds="true"
                    android:layout_alignParentLeft="true"
                    android:clickable="true"
                    android:scaleType="center"
                    android:src="@drawable/ic_back_black"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/imgView_back"
                    android:text="@string/str_prev_step" />

            </RelativeLayout>


        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imgView_logo_loginActivity"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/txt_userInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_define_pass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgView_logo_loginActivity" />

    <LinearLayout
        android:id="@+id/ln_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/txt_userInformation">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayer_pass"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_24dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="@dimen/margin_24dp"
            android:hint="@string/str_hint_pass"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayer_confirmPass"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_24dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="@dimen/margin_24dp"
            android:hint="@string/str_repeat_pas"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_nextStep"
        style="@style/MadresePlus_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_64dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="@dimen/margin_64dp"
        android:padding="@dimen/margin_8dp"
        android:text="@string/str_lets_go"
        app:layout_constraintTop_toBottomOf="@+id/ln_container" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:src="@drawable/logoshade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>