<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/margin_8dp"
    tools:context=".ui.view.login.complete.userinformation.UserInformationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            l</androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/imgView_logo_loginActivity"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:adjustViewBounds="true"
            android:src="@drawable/logo"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/txt_userInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="اطلاعات شخصی"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgView_logo_loginActivity" />

        <LinearLayout
            android:id="@+id/ln_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/txt_userInformation">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayer_firstName"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="@dimen/margin_24dp"
                android:hint="@string/str_first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayer_lastName"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_24dp"
                android:hint="@string/str_last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayer_gender"
                style="@style/AutoCompleteStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_24dp"
                android:hint="@string/str_gender">

                <AutoCompleteTextView
                    android:id="@+id/autoComplete_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:editable="false"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayer_province"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_24dp"
                android:hint="@string/str_province">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_province"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:editable="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayer_city"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_24dp"
                android:hint="@string/str_city">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:editable="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayer_invitationCode"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_24dp"
                android:hint="@string/str_invitation_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_invitationCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_nextStep"
            style="@style/MadresePlus_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_64dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_64dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:padding="@dimen/margin_8dp"
            android:text="@string/str_next_step"
            app:layout_constraintTop_toBottomOf="@+id/ln_container" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/logoshade"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

